Add android and web buttons

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,4 +1,14 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/c25ede606d.js" crossorigin="anonymous"></script>
+  <title>Project Tracker</title>
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="#" style="color: #0F1E3A; font-weight: 800;">Project Tracker Dashboard</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -8,4 +18,15 @@
         Logout
       </span>
     </div>
-</nav>
+  </nav>
+  <div class="row justify-content-center">
+    <div class="col-4">
+      <a href="#"><i class="fa-solid fa-display-code"></i></a>
+      <button class="btn btn-primary" type="submit">Android</button>
+    </div>
+    <div class="col-4">
+      <button class="btn btn-primary" type="submit">Web Development</button>
+    </div>
+  </div>
+</body>
+</html>
