--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -28,5 +28,27 @@
       <button class="btn btn-primary" type="submit">Web Development</button>
     </div>
   </div>
+  <div class="sidebar">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <button class="btn btn-primary" type="submit">Profile</button>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-md-4">
+          <button class="btn btn-primary" type="submit">Add Projects</button>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-md-4">
+          <button class="btn btn-primary" type="submit">Add group members</button>
+        </div>
+      </div>
+      <br>
+    </div>  
+  </div>
 </body>
 </html>
