--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/c25ede606d.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="./landing.component.css">
   <title>Project Tracker</title>
 </head>
 <body>
@@ -19,32 +20,32 @@
       </span>
     </div>
   </nav>
-  <div class="row justify-content-center">
+  <!-- <div class="row justify-content-center">
     <div class="col-4">
       <a href="#"><i class="fa-solid fa-display-code"></i></a>
-      <button class="btn btn-primary" type="submit">Android</button>
+      <button class="btn btn-light" type="submit">Android</button>
     </div>
     <div class="col-4">
-      <button class="btn btn-primary" type="submit">Web Development</button>
+      <button class="btn btn-light" type="submit">Web Development</button>
     </div>
-  </div>
+  </div> -->
   <div class="sidebar">
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <button class="btn btn-primary" type="submit">Profile</button>
+          <button class="btn btn-light" type="submit">Profile</button>
         </div>
       </div>
       <br>
       <div class="row">
         <div class="col-md-4">
-          <button class="btn btn-primary" type="submit">Add Projects</button>
+          <button class="btn btn-light" type="submit">Add Projects</button>
         </div>
       </div>
       <br>
       <div class="row">
         <div class="col-md-4">
-          <button class="btn btn-primary" type="submit">Add group members</button>
+          <button class="btn btn-light" type="submit">Add group members</button>
         </div>
       </div>
       <br>
