Add track buttons

--- a/src/app/components/landing/landing.component.css
+++ b/src/app/components/landing/landing.component.css
@@ -13,4 +13,11 @@
 button{
     background-color: #F9573F;
     outline:#F9573F;
+    width: auto;
+}
+
+.parent{
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
