--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -20,32 +20,34 @@
       </span>
     </div>
   </nav>
-  <!-- <div class="row justify-content-center">
-    <div class="col-4">
-      <a href="#"><i class="fa-solid fa-display-code"></i></a>
-      <button class="btn btn-light" type="submit">Android</button>
-    </div>
-    <div class="col-4">
-      <button class="btn btn-light" type="submit">Web Development</button>
-    </div>
-  </div> -->
+  <div class="container-fluid parent">
+    <div class="row justify-content-center">
+      <div class="col-4">
+        <button class="btn btn-light" type="submit">Android</button>
+      </div>
+      <div class="col-4">
+        <button class="btn btn-light" type="submit">Web Development</button>
+      </div>
+    </div>    
+  </div>
+ 
   <div class="sidebar">
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <button class="btn btn-light" type="submit">Profile</button>
+          <button class="btn btn-light btn-lg" type="submit">Profile</button>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-6">
+          <button class="btn btn-light btn-lg" type="submit">Add Projects</button>
         </div>
       </div>
       <br>
       <div class="row">
         <div class="col-md-4">
-          <button class="btn btn-light" type="submit">Add Projects</button>
-        </div>
-      </div>
-      <br>
-      <div class="row">
-        <div class="col-md-4">
-          <button class="btn btn-light" type="submit">Add group members</button>
+          <button class="btn btn-light btn-lg" type="submit">Add group members</button>
         </div>
       </div>
       <br>
