Add the new button feature

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -20,7 +20,7 @@
       </span>
     </div>
   </nav>
-  <div class="container-fluid parent">
+  <!-- <div class="container-fluid parent">
     <div class="row justify-content-center">
       <div class="col-4">
         <button class="btn btn-light" type="submit">Android</button>
@@ -29,8 +29,7 @@
         <button class="btn btn-light" type="submit">Web Development</button>
       </div>
     </div>    
-  </div>
- 
+  </div> -->
   <div class="sidebar">
     <div class="container">
       <div class="row">
