--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -1,4 +1,25 @@
-.cards{
+
+
+.pro{
+    justify-content: center;
+    display: flex;
+}
+.d-flex{
+    padding: 5px;
+}
+
+.projects{
     display: flex;
     justify-content: space-between;
+}
+
+.follow{
+    display: flex;
+    justify-content: center;
+    padding-right: 50px;
+}
+
+.icon{
+    display: flex;
+    flex-direction: column-reverse;
 }
