modified angular.json by configuring bootstrap. added projects to app component, styled the projects in the projects component

--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,1 +1,85 @@
-<p>projects works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h3 class="text-center mt-5">Projects</h3>
+            <hr>
+        </div>
+    </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-4 mt-2 d-flex">
+                <div class="img-container">
+                    <img src="https://akm-img-a-in.tosshub.com/indiatoday/images/story/202108/Instagram_0.jpg?ZZLGdE1PjohTO.aeUOUEQYBxAWLPgCGT&size=770:433" alt="product" class="product-img">
+                    <button class="bag-btn" data-id="1">
+                        <i class="fas fa-shopping-cart"></i>
+                        View Repo
+                    </button>
+                </div>
+                <div class="project-detail">
+                    <ul>
+                        <li>Owner: Crispus Njenga</li>
+                        <li>Project Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime illum odio nihil consequuntur ratione sapiente fugit, dolorum quia veniam ab aut numquam deleniti exercitationem id voluptatum quod, eum, velit a.</li>
+    
+                        <li>Technologies Used: <span class="technology">Python</span> </li>
+    
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-4 mt-2 d-flex">
+                <div class="img-container">
+                    <img src="https://akm-img-a-in.tosshub.com/indiatoday/images/story/202108/Instagram_0.jpg?ZZLGdE1PjohTO.aeUOUEQYBxAWLPgCGT&size=770:433" alt="product" class="product-img">
+                    <button class="bag-btn" data-id="1">
+                        <i class="fas fa-shopping-cart"></i>
+                        View Repo
+                    </button>
+                </div>
+                <div class="project-detail">
+                    <ul>
+                        <li>Owner: Crispus Njenga</li>
+                        <li>Project Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime illum odio nihil consequuntur ratione sapiente fugit, dolorum quia veniam ab aut numquam deleniti exercitationem id voluptatum quod, eum, velit a.</li>
+    
+                        <li>Technologies Used: <span class="technology">Python</span> </li>
+    
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-4 mt-2 d-flex">
+                <div class="img-container">
+                    <img src="https://akm-img-a-in.tosshub.com/indiatoday/images/story/202108/Instagram_0.jpg?ZZLGdE1PjohTO.aeUOUEQYBxAWLPgCGT&size=770:433" alt="product" class="product-img">
+                    <button class="bag-btn" data-id="1">
+                        <i class="fas fa-shopping-cart"></i>
+                        View Repo
+                    </button>
+                </div>
+                <div class="project-detail">
+                    <ul>
+                        <li><span class="owner">Owner:</span>  Crispus Njenga</li>
+                        <li>Project Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime illum odio nihil consequuntur ratione sapiente fugit, dolorum quia veniam ab aut numquam deleniti exercitationem id voluptatum quod, eum, velit a.</li>
+    
+                        <li>Technologies Used: <span class="technology">Python</span> </li>
+    
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-4 mt-2 d-flex">
+                <div class="img-container">
+                    <img src="https://akm-img-a-in.tosshub.com/indiatoday/images/story/202108/Instagram_0.jpg?ZZLGdE1PjohTO.aeUOUEQYBxAWLPgCGT&size=770:433" alt="product" class="product-img">
+                    <button class="bag-btn" data-id="1">
+                        <i class="fas fa-shopping-cart"></i>
+                        View Repo
+                    </button>
+                </div>
+                <div class="project-detail">
+                    <ul>
+                        <li>Owner: Crispus Njenga</li>
+                        <li>Project Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime illum odio nihil consequuntur ratione sapiente fugit, dolorum quia veniam ab aut numquam deleniti exercitationem id voluptatum quod, eum, velit a.</li>
+    
+                        <li>Technologies Used: <span class="technology">Python</span> </li>
+    
+                    </ul>
+                </div>
+            </div>
+        </div>
+    
+</div>
