--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <nav class="navbar navbar-light bg-light">
+  <nav class="navbar">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Home</a>
     </div>
@@ -16,10 +16,10 @@
   <h5 class="d-flex justify-content-center">BIO DATA</h5>
 
   <div class="follow">
-    <button type="button" class="btn btn-primary">
+    <button type="button" class="btn btn-warning">
       Followers: <span class="badge bg-secondary">300</span>
     </button>
-    <button type="button" class="btn btn-primary">
+    <button type="button" class="btn btn-warning">
       Following: <span class="badge bg-secondary">50</span>
     </button>
     <button type="button" class="btn btn-secondary">Edit Profile</button>
