--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -13,6 +13,10 @@
     justify-content: space-between;
 }
 
+.card:hover{
+    background-color: blue;
+}
+
 .follow{
     display: flex;
     justify-content: center;
@@ -22,4 +26,7 @@
 .icon{
     display: flex;
     flex-direction: column-reverse;
+}
+.navbar{
+    background-color: grey;
 }
