--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-4 mt-2 d-flex">
+            <div class="col-md-4 mt-2 d-flex justify-content-start align-items-start">
                 <div class="img-container">
                     <img src="https://akm-img-a-in.tosshub.com/indiatoday/images/story/202108/Instagram_0.jpg?ZZLGdE1PjohTO.aeUOUEQYBxAWLPgCGT&size=770:433" alt="product" class="product-img">
                     <button class="bag-btn" data-id="1">
@@ -18,15 +18,15 @@
                 </div>
                 <div class="project-detail">
                     <ul>
-                        <li>Owner: Crispus Njenga</li>
-                        <li>Project Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime illum odio nihil consequuntur ratione sapiente fugit, dolorum quia veniam ab aut numquam deleniti exercitationem id voluptatum quod, eum, velit a.</li>
+                        <li><span class="info">Owner:</span> <span class="details">Crispus Njenga</span></li>
+                        <li><span class="info">Project Description: </span> <span class="details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime illum odio nihil consequuntur ratione sapiente fugit, dolorum quia veniam ab aut numquam deleniti exercitationem id voluptatum quod, eum, velit a.</span></li>
     
-                        <li>Technologies Used: <span class="technology">Python</span> </li>
+                        <li><span class="info">Technologies: </span> <span class="technology mt-2">Python</span> </li>
     
                     </ul>
                 </div>
             </div>
-            <div class="col-md-4 mt-2 d-flex">
+            <div class="col-md-4 mt-2 d-flex justify-content-start align-items-start">
                 <div class="img-container">
                     <img src="https://akm-img-a-in.tosshub.com/indiatoday/images/story/202108/Instagram_0.jpg?ZZLGdE1PjohTO.aeUOUEQYBxAWLPgCGT&size=770:433" alt="product" class="product-img">
                     <button class="bag-btn" data-id="1">
@@ -36,15 +36,15 @@
                 </div>
                 <div class="project-detail">
                     <ul>
-                        <li>Owner: Crispus Njenga</li>
-                        <li>Project Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime illum odio nihil consequuntur ratione sapiente fugit, dolorum quia veniam ab aut numquam deleniti exercitationem id voluptatum quod, eum, velit a.</li>
+                        <li><span class="info">Owner:</span> <span class="details">Crispus Njenga</span></li>
+                        <li><span class="info">Project Description: </span> <span class="details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime illum odio nihil consequuntur ratione sapiente fugit, dolorum quia veniam ab aut numquam deleniti exercitationem id voluptatum quod, eum, velit a.</span></li>
     
-                        <li>Technologies Used: <span class="technology">Python</span> </li>
+                        <li><span class="info">Technologies: </span> <span class="technology mt-2">Python</span> </li>
     
                     </ul>
                 </div>
             </div>
-            <div class="col-md-4 mt-2 d-flex">
+            <div class="col-md-4 mt-2 d-flex justify-content-start align-items-start">
                 <div class="img-container">
                     <img src="https://akm-img-a-in.tosshub.com/indiatoday/images/story/202108/Instagram_0.jpg?ZZLGdE1PjohTO.aeUOUEQYBxAWLPgCGT&size=770:433" alt="product" class="product-img">
                     <button class="bag-btn" data-id="1">
@@ -54,15 +54,15 @@
                 </div>
                 <div class="project-detail">
                     <ul>
-                        <li><span class="owner">Owner:</span>  Crispus Njenga</li>
-                        <li>Project Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime illum odio nihil consequuntur ratione sapiente fugit, dolorum quia veniam ab aut numquam deleniti exercitationem id voluptatum quod, eum, velit a.</li>
+                        <li><span class="info">Owner:</span> <span class="details">Crispus Njenga</span></li>
+                        <li><span class="info">Project Description: </span> <span class="details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime illum odio nihil consequuntur ratione sapiente fugit, dolorum quia veniam ab aut numquam deleniti exercitationem id voluptatum quod, eum, velit a.</span></li>
     
-                        <li>Technologies Used: <span class="technology">Python</span> </li>
+                        <li><span class="info">Technologies: </span> <span class="technology mt-2">Python</span> </li>
     
                     </ul>
                 </div>
             </div>
-            <div class="col-md-4 mt-2 d-flex">
+            <div class="col-md-4 mt-2 d-flex justify-content-start align-items-start">
                 <div class="img-container">
                     <img src="https://akm-img-a-in.tosshub.com/indiatoday/images/story/202108/Instagram_0.jpg?ZZLGdE1PjohTO.aeUOUEQYBxAWLPgCGT&size=770:433" alt="product" class="product-img">
                     <button class="bag-btn" data-id="1">
@@ -72,10 +72,10 @@
                 </div>
                 <div class="project-detail">
                     <ul>
-                        <li>Owner: Crispus Njenga</li>
-                        <li>Project Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime illum odio nihil consequuntur ratione sapiente fugit, dolorum quia veniam ab aut numquam deleniti exercitationem id voluptatum quod, eum, velit a.</li>
+                        <li><span class="info">Owner:</span> <span class="details">Crispus Njenga</span></li>
+                        <li><span class="info">Project Description: </span> <span class="details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime illum odio nihil consequuntur ratione sapiente fugit, dolorum quia veniam ab aut numquam deleniti exercitationem id voluptatum quod, eum, velit a.</span></li>
     
-                        <li>Technologies Used: <span class="technology">Python</span> </li>
+                        <li>  <span class="info">Technologies: </span> <span class="technology mt-2">Python</span> </li>
     
                     </ul>
                 </div>
