--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h3 class="text-center mt-5">Projects</h3>
+            <h3 class="text-center mt-5 projects">Projects</h3>
             <hr>
         </div>
     </div>
