--- a/src/app/components/single-project/single-project.component.html
+++ b/src/app/components/single-project/single-project.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid mt-5">
     <div class="row single" style="max-width: 1000px;margin:auto">
         <div class="col-md-4 mb-5">
             <div class="img-container">
@@ -11,11 +11,11 @@
                     <h4 class="projects">Project Members</h4>
                     <p style="text-align: right;"><button class="button">Add Member</button></p> 
                 </div>
-                <ul>
-                    <li>Trevin Livele</li>
-                    <li>Fred Papa</li>
-                    <li>Mwikali Kyalo</li>
-                    <li>Engineer</li>
+                <ul class="list-group">
+                    <!-- <li class="list-group-item"><a href="">Trevin Livele</a></li> -->
+                    <li class="list-group-item"><a href="">Fred Papa</a></li>
+                    <li class="list-group-item"><a href="">Mwikali Kyalo</a></li>
+                    <li class="list-group-item"><a href="">Engineer</a></li>
                 </ul>
             </div>
         </div>
