--- a/src/app/components/single-project/single-project.component.html
+++ b/src/app/components/single-project/single-project.component.html
@@ -2,14 +2,15 @@
     <div class="row single" style="max-width: 1000px;margin:auto">
         <div class="col-md-4 mb-5">
             <div class="img-container">
-                <img src="https://akm-img-a-in.tosshub.com/indiatoday/images/story/202108/Instagram_0.jpg?ZZLGdE1PjohTO.aeUOUEQYBxAWLPgCGT&size=770:433" alt="product" class="product-img">
+                <img src="https://akm-img-a-in.tosshub.com/indiatoday/images/story/202108/Instagram_0.jpg?ZZLGdE1PjohTO.aeUOUEQYBxAWLPgCGT&size=770:433"
+                    alt="product" class="product-img">
             </div>
         </div>
         <div class="col-md-5 ">
             <div class="members">
                 <div class="members-info d-flex justify-between align-items-center">
                     <h4 class="projects">Project Members</h4>
-                    <p style="text-align: right;"><button class="button">Add Member</button></p> 
+                    <p style="text-align: right;"><button class="button">Add Member</button></p>
                 </div>
                 <ul class="list-group">
                     <!-- <li class="list-group-item"><a href="">Trevin Livele</a></li> -->
@@ -20,5 +21,31 @@
             </div>
         </div>
 
-    </div> 
+    </div>
+    <div class="row">
+        <div class="col-md-8" style="max-width: 700px;margin:auto">
+            <h4 class="projects text-center">About Project</h4>
+            <hr>
+            <ul>
+                <li><span class="info">Project Name:</span> <span class="details">Instagram Clone</span></li>
+                <li><span class="info">Owner:</span> <span class="details">Crispus Njenga</span></li>
+                <li><span class="info">Category:</span> <span class="details">Android</span></li>
+                <li><span class="info">Project Description: </span> <span class="details">Lorem ipsum dolor sit amet
+                        consectetur adipisicing elit. Maxime illum odio nihil consequuntur ratione sapiente fugit,
+                        dolorum quia veniam ab aut numquam deleniti exercitationem id voluptatum quod, eum, velit
+                        a.</span></li>
+
+                <li><span class="info">Technologies: </span> <span class="technology mt-2">Python</span> </li>
+            </ul>
+        </div>
+    </div>
+    <div class="row mb-5">
+        <div class="col-md-8" style="max-width: 700px;margin:auto">
+            <p class="text-muted">no comments</p>
+            <form>
+                <textarea name="comment" id="comment" class="form-control" placeholder="Leave a Comment..." cols="30" rows="3"></textarea>
+                <button class="btn btn-success mt-2">Send</button>
+            </form>
+        </div>
+    </div>
 </div>
