--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,20 @@
-<p>login works!</p>
+   
+<section class="first">
+    <section class="content" >
+        <h2 id="header">More than 1000+ projects all in one place</h2>
+    </section>
+    
+    <div class="frontimg">
+        <img src="../../../assets/auth-images/login.jpg" alt="front img" height="600px" width="750px">
+    </div>
+
+
+
+
+<div class="bookers">
+    <h3 id="reg">Please Login</h3>
+    <input type="text" placeholder="Email">
+    <input type="text" placeholder="Password">
+    <a href="#"><button type="button">Login</button></a>
+</div>
+</section>
