--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,1 +1,18 @@
-<p>register</p>
+
+<section class="first">
+    <section class="content" >
+        <h2 id="header">Moringa School Project Tracker</h2>
+    </section>
+    
+    <div class="frontimg">
+        <img src="../../../assets/auth-images/front.jpg" alt="front img" height="600px" width="650px">
+    </div>
+<div class="bookers">
+    <h3 id="reg">Please Register</h3>
+    <input type="text" placeholder="Username">
+    <input type="text" placeholder="Email">
+    <input type="text" placeholder="Password">
+    <input type="text" placeholder="Confirm Password">
+    <a href="#"><button type="button">Register</button></a>
+</div>
+</section>
