--- a/src/app/components/add-project/add-project.component.html
+++ b/src/app/components/add-project/add-project.component.html
@@ -1,1 +1,21 @@
-<p>add-project works!</p>
+<div class="container">
+    <h4 class="d-flex justify-content-center">Add Project</h4>
+    <form>
+        <div class="form-control">
+            <input type="text" name="text" placeholder="Name" id="text">
+        </div>
+        <div class="form-control">
+            <input type="text" name="Description" placeholder="Description" id="Description">
+        </div>
+        <div class="form-control">
+            <input type="text" name="text" placeholder="Members">
+        </div>
+        <div class="form-control">
+            <input type="text" name="text" placeholder="Project link">
+        </div>
+        <div class="mb-3">
+            <input class="form-control" type="file" id="formFile">
+          </div>
+        
+    </form>
+</div>
