--- a/src/app/components/add-project/add-project.component.html
+++ b/src/app/components/add-project/add-project.component.html
@@ -5,15 +5,16 @@
             <input type="text" name="text" placeholder="Name" id="text">
         </div>
         <div class="form-control">
-            <input type="text" name="Description" placeholder="Description" id="Description">
+            <textarea class="form-control" id="Textarea" rows="3" placeholder="Description"></textarea>
         </div>
         <div class="form-control">
-            <input type="text" name="text" placeholder="Members">
+            <input type="text" name="members" placeholder="Members" id="members">
         </div>
         <div class="form-control">
             <input type="text" name="text" placeholder="Project link">
         </div>
         <div class="mb-3">
+            <label for="formFile" class="form-label">Project Image:</label>
             <input class="form-control" type="file" id="formFile">
           </div>
         
