--- a/src/app/components/add-project/add-project.component.html
+++ b/src/app/components/add-project/add-project.component.html
@@ -2,21 +2,21 @@
     <h4 class="d-flex justify-content-center">Add Project</h4>
     <form>
         <div class="form-control">
-            <input type="text" name="text" placeholder="Name" id="text">
+            <input type="text" class="form-control" id="text" placeholder="Name">
         </div>
         <div class="form-control">
             <textarea class="form-control" id="Textarea" rows="3" placeholder="Description"></textarea>
         </div>
         <div class="form-control">
-            <input type="text" name="members" placeholder="Members" id="members">
+            <input type="text" class="form-control" id="members" placeholder="Members">
         </div>
         <div class="form-control">
-            <input type="text" name="text" placeholder="Project link">
+            <input type="text" class="form-control" id="" placeholder="Project Link">
         </div>
         <div class="mb-3">
-            <label for="formFile" class="form-label">Project Image:</label>
             <input class="form-control" type="file" id="formFile">
-          </div>
-        
+          </div>      
     </form>
+    <button type="button" class="btn btn-success" >Add</button>
+
 </div>
