--- a/src/app/components/add-project/add-project.component.html
+++ b/src/app/components/add-project/add-project.component.html
@@ -1,14 +1,19 @@
+<nav class="navbar">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Home</a>
+    </div>
+  </nav>
 <div class="container">
     <h4 class="d-flex justify-content-center">Add Project</h4>
     <form>
         <div class="form-control">
-            <input type="text" class="form-control" id="text" placeholder="Name">
+            <input type="text" class="form-control" id="text" placeholder="Project Name">
         </div>
         <div class="form-control">
-            <textarea class="form-control" id="Textarea" rows="3" placeholder="Description"></textarea>
+            <textarea class="form-control" id="Textarea" rows="3" placeholder="Project Description"></textarea>
         </div>
         <div class="form-control">
-            <input type="text" class="form-control" id="members" placeholder="Members">
+            <input type="text" class="form-control" id="members" placeholder="Project Members">
         </div>
         <div class="form-control">
             <input type="text" class="form-control" id="" placeholder="Project Link">
@@ -17,6 +22,7 @@
             <input class="form-control" type="file" id="formFile">
           </div>      
     </form>
-    <button type="button" class="btn btn-success" >Add</button>
-
+    <div class="d-grid gap-2 col-6 mx-auto">
+        <button class="btn btn-success" type="button">Add Project</button>
+      </div>
 </div>
