--- a/src/app/components/add-project/add-project.component.css
+++ b/src/app/components/add-project/add-project.component.css
@@ -1,6 +1,15 @@
 .container{
     max-width: 50%;
-    background-color: blue;
+    background-color: rgb(19, 113, 153);
     border-radius: 10px;
     margin-top: 10px;
+    
+}
+
+.navbar{
+    background-color: grey;
+}
+
+.d-grid{
+    padding-bottom: 15px;
 }
