--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -20,37 +20,62 @@
       </span>
     </div>
   </nav>
-  <!-- <div class="container-fluid parent">
-    <div class="row justify-content-center">
-      <div class="col-4">
-        <button class="btn btn-light" type="submit">Android</button>
-      </div>
-      <div class="col-4">
-        <button class="btn btn-light" type="submit">Web Development</button>
-      </div>
-    </div>    
-  </div> -->
+
+  <!--side navbar-->
   <div class="sidebar">
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <button class="btn btn-light btn-lg" type="submit">Profile</button>
+          <button class="btn-light btn-lg" type="submit">About</button>
         </div>
       </div>
       <br>
       <div class="row">
         <div class="col-6">
-          <button class="btn btn-light btn-lg" type="submit">Add Projects</button>
+          <button class="btn-light btn-lg" type="submit">Profile</button>
         </div>
       </div>
       <br>
       <div class="row">
         <div class="col-md-4">
-          <button class="btn btn-light btn-lg" type="submit">Add group members</button>
+          <button class="btn-light btn-lg" type="submit">Add project</button>
         </div>
       </div>
       <br>
+      <div class="row">
+        <div class="col-md-4">
+          <button class="btn-light btn-lg" type="submit">Contact Us</button>
+        </div>
+      </div>
     </div>  
+  </div>
+
+  <!--track-->
+  <div class="android">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-6">
+          <img src="../../../assets/images/android.png" class="rounded float-end" alt="..." width="300px" height="350px"> 
+        </div>
+        <div class="col-4">
+          <button class="btn-light btn-lg" type="submit" style="background-color: #0F1E3A; color: aliceblue;">
+            Android Development</button>
+        </div>      
+      </div>
+    </div>
+  </div>
+  <div class="web">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-6">
+          <img src="../../../assets/images/web.png" class="rounded float-end" alt="..." width="300px" height="350px"> 
+        </div>
+        <div class="col-4">
+          <button class="btn-light btn-lg" type="submit" style="background-color: #0F1E3A; color: aliceblue;">
+            Web Development</button>
+        </div>      
+      </div>
+    </div>
   </div>
 </body>
 </html>
