--- a/src/app/components/landing/landing.component.css
+++ b/src/app/components/landing/landing.component.css
@@ -1,4 +1,4 @@
-.sidebar{
+  .sidebar{
     background-color:#E1E1E1;
     height: 100%;
     width: 30%;
@@ -8,9 +8,9 @@
     left: 0;
     overflow-x: hidden;
     padding: 5%;
-}
+  }
 
-button {
+  button {
     display: block;
     padding: 1.3em 3em;
     font-size: 12px;
@@ -25,21 +25,51 @@ button {
     transition: all 0.3s ease 0s;
     cursor: pointer;
     outline: none;
-   }
+  }
    
-   button:hover {
+  button:hover {
     background-color: #F9573F;
     box-shadow: 0px 15px 20px rgba(249, 87, 63, 0.4);
     color: #fff;
     transform: translateY(-7px);
-   }
+  }
    
-   button:active {
+  button:active {
     transform: translateY(-1px);
-   }
+  }
 
-   .android{
+  .android{
     margin: 20px;
-    padding: 20px;
-   }
+    float: left;
+    padding: 10px;
+    width:33.33%;
+    position: relative;
+    left: 40%;
+    top: -10%;
+  }
+
+  .web{
+    margin: 20px;
+    float: left;
+    padding: 10px;
+    width:33.33%;
+    position: relative;
+    left: 40%;
+  }
+
+  .buttn{
+    position: relative;
+    bottom: -350%;
+    top: 42em;
+    align-items: center;
+    left: -10em;
+    height: 100%;
+  } 
+
+  .btns{
+    position: relative;
+    bottom: -2%;
+    justify-content: center;
+  }
+  
 
