--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -9,13 +9,13 @@
   <title>Project Tracker</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #101F3C;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#" style="color: #0F1E3A; font-weight: 800;">Project Tracker Dashboard</a>
+      <a class="navbar-brand" href="#" style="color: #F9573F; font-weight: 800;">Project Tracker Dashboard</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <span class="navbar-text" style="color: #0F1E3A; font-weight: 500;">
+      <span class="navbar-text" style="color: #F9573F; font-weight: 500;">
         Logout
       </span>
     </div>
@@ -52,29 +52,36 @@
 
   <!--track-->
   <div class="android">
-    <div class="container-fluid">
+    <div class="container">
       <div class="row justify-content-center">
         <div class="col-6">
-          <img src="../../../assets/images/android.png" class="rounded float-end" alt="..." width="300px" height="350px"> 
+          <img src="../../../assets/images/androidremovebg.png" class="rounded float-end" alt="..." width="300px" height="350px"> 
+          <br>
+          <button class="btn-light btn-lg btns" type="submit" style="background-color: #0F1E3A; color: aliceblue;">
+            Android Development</button>      
         </div>
-        <div class="col-4">
-          <button class="btn-light btn-lg" type="submit" style="background-color: #0F1E3A; color: aliceblue;">
-            Android Development</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="web">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-6">
+          <img src="../../../assets/images/web.png" class="rounded float-end" alt="..." width="300px" height="350px" 
+          style="position: relative; left: 20px;"> 
+          <br>
+          <br>
+          <button class="btn-light btn-lg btns" type="submit" style="background-color: #0F1E3A; color: aliceblue;">
+            Web Development</button>
         </div>      
       </div>
     </div>
   </div>
-  <div class="web">
-    <div class="container-fluid">
-      <div class="row justify-content-center">
-        <div class="col-6">
-          <img src="../../../assets/images/web.png" class="rounded float-end" alt="..." width="300px" height="350px"> 
-        </div>
-        <div class="col-4">
-          <button class="btn-light btn-lg" type="submit" style="background-color: #0F1E3A; color: aliceblue;">
-            Web Development</button>
-        </div>      
-      </div>
+  <div class="row justify-content-center">
+    <div class="column">
+      <button class="btn-light btn-lg buttn" type="submit" style="background-color: #F9573F; color: aliceblue;">
+        Choose Track to View and Contribute to Projects</button>
     </div>
   </div>
 </body>
