Add design adjustments

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -7,16 +7,18 @@
   <script src="https://kit.fontawesome.com/c25ede606d.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./landing.component.css">
   <title>Project Tracker</title>
+  
 </head>
 <body>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #101F3C;">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #101F3C; font-family: 'Quicksand', sans-serif;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#" style="color: #F9573F; font-weight: 800;">Project Tracker Dashboard</a>
+      <a class="navbar-brand" href="#" style="color: #F9573F; font-weight: 900;">Project Tracker Dashboard</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <span class="navbar-text" style="color: #F9573F; font-weight: 500;">
-        Logout
+      <span class="navbar-text" style="color: #F9573F; font-weight: 600;">
+        Logout 
+        <i class="fa-solid fa-right-from-bracket"></i>
       </span>
     </div>
   </nav>
@@ -25,7 +27,7 @@
   <div class="sidebar">
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-6">
           <button class="btn-light btn-lg" type="submit">About</button>
         </div>
       </div>
@@ -37,13 +39,13 @@
       </div>
       <br>
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-6">
           <button class="btn-light btn-lg" type="submit">Add project</button>
         </div>
       </div>
       <br>
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-6">
           <button class="btn-light btn-lg" type="submit">Contact Us</button>
         </div>
       </div>
