--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -34,8 +34,7 @@
         <h5 class="card-title">Project Name: Instaclone</h5>
       </div>
       <div class="card-body">
-        <a href="#" class="card-link">Project Link</a>
-        <a href="#" class="card-link">Github Link</a>
+        <a href="#" class="card-link"><button class="btn btn-primary">Project link</button></a>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
@@ -44,8 +43,7 @@
         <h5 class="card-title">Project Name: Instaclone</h5>
       </div>
       <div class="card-body">
-        <a href="#" class="card-link">Project Link</a>
-        <a href="#" class="card-link">Github Link</a>
+        <a href="#" class="card-link"><button class="btn btn-primary">Project link</button></a>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
@@ -54,8 +52,7 @@
         <h5 class="card-title">Project Name: Instaclone</h5>
       </div>
       <div class="card-body">
-        <a href="#" class="card-link">Project Link</a>
-        <a href="#" class="card-link">Github Link</a>
+        <a href="#" class="card-link"><button class="btn btn-primary">Project link</button></a>
       </div>
     </div>
     
