--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -16,10 +16,10 @@
   <h5 class="d-flex justify-content-center">BIO DATA</h5>
 
   <div class="follow">
-    <button type="button" class="btn btn-warning">
+    <button type="button" class="btn btn-primary">
       Followers: <span class="badge bg-secondary">300</span>
     </button>
-    <button type="button" class="btn btn-warning">
+    <button type="button" class="btn btn-primary">
       Following: <span class="badge bg-secondary">50</span>
     </button>
     <button type="button" class="btn btn-secondary">Edit Profile</button>
