--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,1 +1,1 @@
-<button [ngStyle]="{'background-color': color}" (click) = "onClick()" >{{text}}</button>
+<button class="btn btn-primary" [ngStyle]="{'background-color': color}" (click) = "onClick()" >{{text}}</button>
