--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/c25ede606d.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./about.component.css">
     <title>Project Tracker</title>
 </head>
 <body>
@@ -27,6 +28,11 @@
     </nav>
   
   <!--image-->  
+  <!--about us-->
+  <!--footer-->
+  <footer>
+
+  </footer>
   </div>  
 </body>
 </html>
