--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -26,12 +26,23 @@
         </span>
       </div>
     </nav>
-  
-  <!--image-->  
+
   <!--about us-->
+ 
+      
   <!--footer-->
   <footer>
-
+    <div class="footer-content">
+      <h3>Project Tracker</h3>
+      <p>Project Tracker is a web application that helps students track the applications<br> they have created 
+        in their learning process. They also get to invite collaborators to the project
+      </p>
+      <ul class="socials">
+        <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+        <li><a href="#"><i class="fa-brands fa-twitter-square"></i></a></li>
+        <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+     </ul>
+  </div>
   </footer>
   </div>  
 </body>
