added edit profile

--- a/src/app/components/edit-profile/edit-profile.component.html
+++ b/src/app/components/edit-profile/edit-profile.component.html
@@ -1,1 +1,27 @@
-<p>edit-profile works!</p>
+<section class="first">
+    <div class="frontimg">
+        <img src="../../../assets/auth-images/editprofile.jpg" alt="front img" height="600px" width="650px">
+    </div>
+<div class="bookers">
+    <h3 id="reg">Edit Your Profile</h3>
+    
+    <div class='insameline'> 
+    <input type="text" placeholder="Username">
+    <input type="text" placeholder="Email">
+
+    <input type="text" placeholder="Username">
+    <input type="text" placeholder="Email">   
+</div>
+
+<div class='insameline-1'> 
+    <input type="text" placeholder="Username">
+    <input type="text" placeholder="Email">
+
+    <input type="text" placeholder="Username">
+    <input type="text" placeholder="Email">
+    
+</div>
+<input type="file" id="myFile" name="filename">
+<a href="#"><button type="button">Update</button></a>
+</div>
+</section>
