--- a/src/app/components/edit-profile/edit-profile.component.html
+++ b/src/app/components/edit-profile/edit-profile.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <section class="first">
     <div class="frontimg">
         <img src="../../../assets/auth-images/editprofile.jpg" alt="front img" height="600px" width="650px">
