--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -33,7 +33,7 @@ body, html {
   /* Position text in the middle of the page/image */
   .bg-text {
     background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0, 0.3); /* Black w/opacity/see-through */
+    background-color: rgba(30,53,87,0.4); /* Black w/opacity/see-through */
     color: white;
     font-weight: bold;
     border: 3px solid #f1f1f1;
@@ -103,7 +103,7 @@ footer{
     transition: color .4s ease;
 }
 .socials a:hover i{
-    color: #E1E1E1;
+    color: #F9573F;
 }
 @media (max-width:500px) {
     .footer-menu ul{
@@ -111,4 +111,20 @@ footer{
       margin-top: 5px;
       margin-bottom: 2px;
     }
+}
+.footer-bottom p{
+  float: left;
+  font-size: 14px;
+  word-spacing: 2px;
+  text-transform: capitalize;
+}
+.footer-bottom p a{
+ color:#44bae8;
+ font-size: 16px;
+ text-decoration: none;
+}
+.footer-bottom span{
+   text-transform: uppercase;
+   opacity: .4;
+   font-weight: 200;
 }
