--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -9,39 +9,49 @@
     <title>Project Tracker</title>
 </head>
 <body>
-  <div class="container">
+  <div class="container-fluid">
     <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #101F3C; font-family: 'Quicksand', sans-serif;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#" style="color: #F9573F; font-weight: 900;">Project Tracker Dashboard</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <span class="navbar-text" style="color: #F9573F; font-weight: 600;">
-          Home
-          <i class="fa-light fa-house-user"></i>
-        </span>
-        <span class="navbar-text" style="color: #F9573F; font-weight: 600;">
-          Logout 
-          <i class="fa-solid fa-right-from-bracket"></i>
-        </span>
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#" style="color: #F9573F; font-weight: 600;"> 
+              Home <i class="fa-light fa-house-user"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" style="color: #F9573F; font-weight: 600;">
+              Profile <i class="fa-light fa-square-user"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" style="color: #F9573F; font-weight: 600;"> 
+              Logout <i class="fa-solid fa-right-from-bracket"></i></a>
+          </li>
+        </ul>
       </div>
     </nav>
 
   <!--about us-->
- 
-      
+  <div class="bg-image"></div>
+  <div class="bg-text">
+    <h2 style="font-size: 3em; color: #F9573F;">Project Tracker</h2>
+    <p style="font-size: 25px; color: white; font-weight: 600;"> 
+      Project Tracker is a web application that helps students track the applications<br>
+      they have created in their learning process. They also get to invite collaborators to the projects and collaborate.</p>
+  </div>
+       
   <!--footer-->
   <footer>
     <div class="footer-content">
-      <h3>Project Tracker</h3>
-      <p>Project Tracker is a web application that helps students track the applications<br> they have created 
-        in their learning process. They also get to invite collaborators to the project
-      </p>
+      <h4>Contact Us</h4>
       <ul class="socials">
         <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
         <li><a href="#"><i class="fa-brands fa-twitter-square"></i></a></li>
         <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-     </ul>
+        <li><a href="#"><i class="fa-light fa-circle-envelope"></i></a></li>
+      </ul>
+      <div class="footer-bottom">
+        <p>Copyright &copy;2022 <a href="#" style="text-decoration: none; color: aliceblue;"> ProjectTracker</a> </p>
+      </div>
   </div>
   </footer>
   </div>  
