--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -16,22 +16,22 @@
         <ul class="nav justify-content-end">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#" style="color: #F9573F; font-weight: 600;"> 
-              Home <i class="fa-light fa-house-user"></i></a>
+              Home <span><i class="fa-light fa-house-user"></i></span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#" style="color: #F9573F; font-weight: 600;">
-              Profile <i class="fa-light fa-square-user"></i></a>
+              Profile <span><i class="fa-light fa-square-user"></i></span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#" style="color: #F9573F; font-weight: 600;"> 
-              Logout <i class="fa-solid fa-right-from-bracket"></i></a>
+              Logout <span><i class="fa-solid fa-right-from-bracket"></i></span></a>
           </li>
         </ul>
       </div>
     </nav>
 
   <!--about us-->
-  <div class="bg-image"></div>
+  <div class="bg-image" ></div>
   <div class="bg-text">
     <h2 style="font-size: 3em; color: #F9573F;">Project Tracker</h2>
     <p style="font-size: 25px; color: white; font-weight: 600;"> 
@@ -42,7 +42,7 @@
   <!--footer-->
   <footer>
     <div class="footer-content">
-      <h4>Contact Us</h4>
+      <h5>Contact Us</h5>
       <ul class="socials">
         <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
         <li><a href="#"><i class="fa-brands fa-twitter-square"></i></a></li>
@@ -50,9 +50,9 @@
         <li><a href="#"><i class="fa-light fa-circle-envelope"></i></a></li>
       </ul>
       <div class="footer-bottom">
-        <p>Copyright &copy;2022 <a href="#" style="text-decoration: none; color: aliceblue;"> ProjectTracker</a> </p>
+        <p style="float: left;">Copyright &copy;2022 <a href="#" style="text-decoration: none; color: aliceblue;"> ProjectTracker</a> </p>
       </div>
-  </div>
+    </div>
   </footer>
   </div>  
 </body>
